k8s_homework_kustomize/overlays/test/ingress.yaml
# test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontapp
  labels:
    training: block4
    homework: frontapp
spec:
  rules:
  - host: "other.cubix.localhost"
    http:
      paths:
      - pathType: Prefix
        path: "/frontapp"
        backend:
          service:
            name: frontapp
            port:
              number: 8080
