k8s_homework_kustomize/overlays/test/patch-frontapp.yaml
# dev/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontapp
spec:
  replicas: 1
